# herdr-sidebar

./: .gitignore  CLAUDE.md  LICENSE  README.md  herdr-layout.yaml
.claude/skills/feature-worktree/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  ruleset-main.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
plugins/herdr-aa-filetree/: Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-aa-filetree/scripts/: ensure-explorer.ps1  ensure-explorer.sh  launch-ensure.vbs  open-explorer.ps1  open-explorer.sh  redeploy.ps1  redeploy.sh
plugins/herdr-aa-filetree/src/: actions.rs  app.rs  ensure.rs  icons.rs  ipc.rs  launch.rs  lib.rs  main.rs  sidebar.rs  sideways.rs  tree.rs  viewer.rs
plugins/herdr-aa-git/: Cargo.toml  herdr-plugin.toml
plugins/herdr-aa-git/scripts/: open-git-panel.ps1  open-git-panel.sh
plugins/herdr-aa-git/src/: app.rs  git.rs  icons.rs  ipc.rs  launch.rs  main.rs
plugins/herdr-aa-sidebar/: Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-aa-sidebar/scripts/: ensure-sidebar.sh  launch-ensure.vbs  open-git.ps1  open-git.sh  open-sidebar.sh  redeploy.ps1  redeploy.sh
plugins/herdr-aa-sidebar/src/: actions.rs  ensure.rs  explorer_app.rs  git.rs  ipc.rs  launch.rs  lib.rs  main.rs  scm_app.rs  snooze.rs  state.rs  suggest.rs  syntax.rs  ui.rs  viewer.rs
plugins/herdr-sidebar/: Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-sidebar/scripts/: ensure-sidebar.sh  launch-ensure.vbs  open-git.ps1  open-git.sh  open-sidebar.sh  redeploy.ps1  redeploy.sh
plugins/herdr-sidebar/src/: actions.rs  ansi.rs  diffview.rs  ensure.rs  explorer_app.rs  fontsetup.rs  icons.rs  ipc.rs  launch.rs  lib.rs  main.rs  scm_app.rs  snooze.rs  state.rs  syntax.rs  tree.rs  ui.rs  viewer.rs
tools/: setup-playground.sh
tools/screenshots/: attach_shoot.ps1  blur_region.py  capture.ps1  capture_exact.ps1  capture_titled.ps1  crop.ps1  frame_all.py  frame_pil.py  herdr_rpc.py  resize_titled.ps1  resize_wt.ps1  resize_wt_async.ps1  setup_demo.sh  shot.py  stage-shoot-session-bom.ps1  stage-shoot-session.ps1
