[package]
name = "herdr-aa-filetree"
version = "0.1.0"
edition = "2024"
description = "VS Code-style file explorer as a herdr TUI pane"
license = "MIT"

[lib]
name = "herdr_aa_filetree"
path = "src/lib.rs"

[[bin]]
name = "herdr-aa-filetree"
path = "src/main.rs"

# Windowless sidecar for [[events]] hooks: GUI subsystem on Windows (never owns a
# console) talking to herdr's socket API directly — spawning console tools from a
# hook flashes a Windows Terminal window per process on Windows 11.
[[bin]]
name = "herdr-aa-filetree-ensure"
path = "src/bin/ensure.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
